<resources>
    <string name="app_name">B9000</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="upload_image">Upload Image</string>
    <string name="title_profile">Profile</string>
    <string name="title_search">Search</string>

    <string name="password">Password</string>
    <string name="register_lable">Register</string>
    <string name="sign_in_lable">Sign In</string>
    <string name="full_name">Full Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="gender">Pick your gender</string>
    <string-array name="array_gender">
        <item>Man</item>
        <item>Woman</item>
    </string-array>
    <string name="profile_picture">Profile Picture</string>
    <string name="add_picture">Add Picture</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="music">Music</string>
    <string name="sports">Sports</string>
    <string name="categories">Categories</string>
    <string name="movies_and_tv"><![CDATA[Movies & TV]]></string>
</resources>
