<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@id/home_fragment"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@id/search_fragment"
        android:icon="@android:drawable/ic_search_category_default"
        android:title="@string/title_search" />

    <item
        android:id="@id/upload_image_fragment"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/upload_image" />

    <item
        android:id="@id/notifications_fragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_notifications" />

    <item
        android:id="@id/profile_fragment"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/title_profile" />

    <item android:id="@+id/status_service"
        android:title="Categories"
        android:showAsAction="withText"/>

    <item
        android:id="@id/movies_tv"
        android:title="@string/movies_and_tv" />
    <item
        android:id="@id/music"
        android:title="@string/music" />
    <item
        android:id="@id/sports"
        android:title="@string/sports" />
</menu>
