<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">


    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/register_lable"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="@color/dark_orange"
        android:textStyle="bold"
        app:autoSizeTextType="uniform"
        app:fontFamily="sans-serif-condensed-light" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="match_parent"
        android:layout_height="54dp"
        android:text="@string/full_name"
        app:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/turquoise"
        android:textSize="20"/>

    <EditText
        android:id="@+id/etFullName"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/email"
        app:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/turquoise"
        android:textSize="20"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/etGender"
        android:entries="@array/array_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/btn_dropdown"
        app:fontFamily="sans-serif-condensed-light"/>

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/date_of_birth"
        app:fontFamily="sans-serif-condensed-light"
        android:textColor="@color/turquoise"
        android:textSize="20"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etDateOfBirth"
        android:layout_width="match_parent"
        android:inputType="date"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/turquoise"
        android:textSize="20"
        app:fontFamily="sans-serif-condensed-light" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:inputType="textPassword"
        android:layout_height="wrap_content" />

    <!--<TextView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:text="@string/profile_picture"-->
        <!--app:fontFamily="sans-serif-condensed-light"-->
        <!--android:textColor="@color/turquoise"-->
        <!--android:textSize="20"-->
        <!--android:layout_height="wrap_content" />-->

    <!--<Button-->
        <!--android:layout_width="wrap_content"-->
        <!--android:text="@string/add_picture"-->
        <!--android:layout_height="wrap_content" />-->

    <Button
        android:id="@+id/bRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_design"
        android:text="@string/register_lable"
        android:textColor="@color/dark_orange" />


</LinearLayout>